수정 : Video의 크기가 모드에 따라 달라지도록 수정
한 줄에 보이는 video의 개수가 모드에 따라 달라지도록, 모드 별 크기를 지정

--- a/src/components/video.module.css
+++ b/src/components/video.module.css
@@ -1,18 +1,22 @@
 .video {
-  width: 25%;
   display: flex;
   flex-flow: column nowrap;
   padding: 1.5rem;
   color: #fefefe;
+  cursor: pointer;
+}
+
+.video.list-main {
+  width: 25%;
+}
+
+.video.list-sub {
+  width: 100%;
 }
 
 .thumbnail {
   margin-bottom: 1rem;
 }
-
-/* .video > span {
-  margin: 0.5rem 0;
-} */
 
 .title {
   font-size: 1rem;
