추가 : 동영상이 선택되었을 때의 스타일 추가
동영상이 선택되면 리스트의 영역이 줄어들도록 스타일 추가

--- a/src/components/videos.module.css
+++ b/src/components/videos.module.css
@@ -1,6 +1,20 @@
+.body {
+  display: flex;
+  flex-flow: row wrap;
+  background-color: #131313;
+  padding: 2rem 0rem;
+}
+
 .list {
   display: flex;
   flex-flow: row wrap;
-  padding: 2rem;
-  background-color: #131313;
+  padding: 0rem 2rem;
+}
+
+.info-opened .list {
+  width: 30%;
+}
+
+.info-closed .list {
+  width: 100%;
 }
