--- a/src/app.module.css
+++ b/src/app.module.css
@@ -10,3 +10,10 @@ li {
   padding: 0;
   list-style: none;
 }
+
+.body {
+  display: flex;
+  flex-flow: row wrap;
+  background-color: #131313;
+  padding: 2rem 0rem;
+}
