제거 : 동영상 리스트 모드에 따라 스타일이 바뀌던 기능 제거
동영상 리스트 모드가 달라질 때마다 Video Component의 class를 바꾸어주는 것은 낭비 같아, 보다 상위 component에서 관리하도록 하고 Video에서는 해당 요소 제거

--- a/src/components/video.module.css
+++ b/src/components/video.module.css
@@ -1,17 +1,11 @@
 .video {
+  width: 25%;
+  min-width: 300px;
   display: flex;
   flex-flow: column nowrap;
   padding: 1.5rem;
   color: #fefefe;
   cursor: pointer;
-}
-
-.video.list-main {
-  width: 25%;
-}
-
-.video.list-sub {
-  width: 100%;
 }
 
 .thumbnail {
