--- a/src/components/videos.module.css
+++ b/src/components/videos.module.css
@@ -1,6 +1,13 @@
 .list {
+  width: 100%;
+  max-width: 1280px;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
-  padding: 0rem 2rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .list {
+    flex-grow: 1;
+  }
 }
