--- a/src/app.module.css
+++ b/src/app.module.css
@@ -9,7 +9,7 @@ li {
   list-style: none;
 }
 
-.body {
+.content {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-evenly;
@@ -18,7 +18,7 @@ li {
 }
 
 @media screen and (max-width: 1200px) {
-  .body {
+  .content {
     flex-flow: row wrap;
   }
 }
