수정 : 최신 언어에 맞게끔 css 수정

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -39,7 +39,7 @@
   height: 40px;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: end;
+  justify-content: flex-end;
   flex-grow: 1;
 }
 
