--- a/src/components/video.module.css
+++ b/src/components/video.module.css
@@ -1,9 +1,14 @@
-.video {
+.video-wrap {
   width: 25%;
   min-width: 300px;
+  padding: 1.5rem;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-flow: column nowrap;
-  padding: 1.5rem;
   color: #fefefe;
   cursor: pointer;
 }
