--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,9 +1,15 @@
 .navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
   width: 100%;
   height: 80px;
   background-color: #181818;
   color: #fefefe;
   padding: 0 4rem;
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
