수정 : loader 사이즈 이상을 해결하기 위한 css 스타일 추가

--- a/src/components/content.module.css
+++ b/src/components/content.module.css
@@ -1,6 +1,6 @@
 .content {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: space-evenly;
   background-color: #131313;
   padding: 2rem;
@@ -14,7 +14,6 @@
 }
 
 .observer {
-  width: 100%;
   background-color: #131313;
   height: 5rem;
 }
