수정 : 가운데 정렬을 위한 css 수정

--- a/src/components/content.module.css
+++ b/src/components/content.module.css
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-evenly;
+  align-items: center;
   background-color: #131313;
   padding: 2rem;
   margin-top: 80px;
